--- a/app/views/public_recipes/index.html.erb
+++ b/app/views/public_recipes/index.html.erb
@@ -7,16 +7,18 @@
       </div>
       <div class="pub flex flex-col gap-6">
         <h2 class="text-3xl font-extrabold leading-none tracking-tight text-gray-900 md:text-3xl lg:text-3xl dark:text-white">Public Recipes</h2>
-        <div class="flex flex-col">
+        <div class="flex flex-col gap-4">
           <% @public_recipes.each_with_index do |recipe, index| %>
-            <div class="grid grid-cols-4 gap-4">
-              <div class="col-span-2">
+            <div class="border-solid border-2 border-stone-400 rounded grid grid-cols-2 gap-4">
+              <div class="c">
                 <h3 class="title"><%= link_to " #{recipe.name }", recipe_path(recipe) %></h3>
                 <h4 class="card-text-name"><strong>By:</strong> <%= recipe.user.name %></h4>
               </div>
-              <ul class="col-span-2">
-                <li class="c"><strong>Total Items:</strong><%= @recipe_food_counts[recipe.name] %></li>
-                <li class="c"><strong>Total Price:</strong> <%= @total_recipe_food_price[recipe.name]  %></li>
+              <ul class="c">
+                <% recipe_food_count = @recipe_food_counts.find { |count| count[:recipe_id] == recipe.id } %>
+                <% total_food_price = @total_recipe_food_price.find { |price| price[:recipe_id] == recipe.id } %>
+                <li class="c"><strong>Total Items:</strong><%= recipe_food_count[:recipe_food_count] %></li>
+                <li class="c"><strong>Total Price:</strong> <%= total_food_price[:total_food_price] %></li>
               </ul>
             </div>
           <% end %>
