--- a/app/views/public_recipes/index.html.erb
+++ b/app/views/public_recipes/index.html.erb
@@ -1,6 +1,6 @@
 <section class="Shopping flex items-center mx-auto justify-center mt-24">
-  <div class="food flex flex-col gap-6 px-10">
-      <div class="flex items-center justify-center">
+  <div class="pub-food flex flex-col gap-6 px-10">
+      <div class="pub-none flex items-center justify-center">
         <% if @public_recipes.empty? %>
           <p class="text-center text-2xl font-extrabold leading-none tracking-tight text-gray-900 md:text-2xl lg:text-3xl dark:text-white">Recipes not available</p>
         <% else %>
@@ -9,7 +9,7 @@
         <h2 class="text-3xl font-extrabold leading-none tracking-tight text-gray-900 md:text-3xl lg:text-3xl dark:text-white">Public Recipes</h2>
         <div class="flex flex-col gap-4">
           <% @public_recipes.each_with_index do |recipe, index| %>
-            <div class="border-solid border-2 border-stone-400 rounded grid grid-cols-2 gap-4">
+            <div class="content-here border-solid border-2 border-stone-400 rounded grid grid-cols-2 gap-4">
               <div class="c">
                 <h3 class="title"><%= link_to " #{recipe.name }", recipe_path(recipe) %></h3>
                 <h4 class="card-text-name"><strong>By:</strong> <%= recipe.user.name %></h4>
