--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,7 +1,7 @@
 <nav class="bg-white dark:bg-gray-900 fixed w-full z-20 top-0 start-0 border-b border-gray-200 dark:border-gray-600">
   <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
   <div class="flex items-center space-x-3 rtl:space-x-reverse">
-      <img src="https://www.ajc.com/resizer/U7zTVvkmxcxhAUi-EBgBB0DDokA=/814x458/cloudfront-us-east-1.images.arcpublishing.com/ajc/IMBWXAEJ4HWWVT6BKQAQPFOGAM.jpg" class="h-8" alt="Flowbite Logo">
+      <img src="https://www.ajc.com/resizer/U7zTVvkmxcxhAUi-EBgBB0DDokA=/814x458/cloudfront-us-east-1.images.arcpublishing.com/ajc/IMBWXAEJ4HWWVT6BKQAQPFOGAM.jpg" class="h-8 rounded-full" alt="Flowbite Logo">
       <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Afrikan Recipe</span>
   </div>
   <div class="flex md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
